--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A simple version of swapi.co for cefet-web purposes",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
   "keywords": [
     "star",
